added a second why of logging in

--- a/Broker/src/main/resources/templates/login.html
+++ b/Broker/src/main/resources/templates/login.html
@@ -41,7 +41,7 @@
       <button type="submit" class="w-full sm:w-auto px-6 py-3 bg-pink-600 text-white rounded-md hover:bg-pink-700 transition-colors text-lg font-medium shadow-md">
         Login
       </button>
-      <a th:href="@{/login/oauth2/}" class="w-full sm:w-auto inline-block text-center bg-white text-pink-600 border border-pink-600 font-bold py-2 px-4 rounded-md shadow-lg hover:bg-pink-50 hover:text-pink-700 transition duration-300 ease-in-out text-base">
+      <a th:href="@{/manager/oauth2/}" class="w-full sm:w-auto inline-block text-center bg-white text-pink-600 border border-pink-600 font-bold py-2 px-4 rounded-md shadow-lg hover:bg-pink-50 hover:text-pink-700 transition duration-300 ease-in-out text-base">
         Login Via Auth0
       </a>
       <p class="text-gray-700 text-sm">Don't have an account yet?</p>
