cancel error handel done

--- a/Broker/src/main/resources/templates/myOrders.html
+++ b/Broker/src/main/resources/templates/myOrders.html
@@ -67,6 +67,7 @@
         <input type="hidden" name="venueReservationId" th:value="${order.venueId}" />
         <input type="hidden" name="photographerReservationId" th:value="${order.photographerId}" />
         <input type="hidden" name="cateringReservationId" th:value="${order.cateringId}" />
+        <input type="hidden" name="orderId" th:value="${order.id}" />>
         <button type="submit"
                 class="w-full px-4 py-2 bg-red-500 text-white text-sm font-semibold rounded-md hover:bg-red-600 transition-colors">
           Cancel Active Reservations
