--- a/Broker/src/main/resources/templates/error.html
+++ b/Broker/src/main/resources/templates/error.html
@@ -43,16 +43,25 @@
       <form id="booking-form" method="GET" action="/confirm"
             th:if="${venueId != null or photographerId != null or cateringId != null}"
             th:attr="data-date=${date}, data-location=${location}" class="w-full md:w-auto">
-        <input type="hidden" name="venueId" id="venueId">
-        <input type="hidden" name="photographerId" id="photographerId">
-        <input type="hidden" name="cateringId" id="cateringId">
-        <input type="hidden" name="date" id="date">
-        <input type="hidden" name="location" id="location">
+
+        <!-- original service IDs -->
+        <input type="hidden" name="venueId" th:value="${venueId}">
+        <input type="hidden" name="photographerId" th:value="${photographerId}">
+        <input type="hidden" name="cateringId" th:value="${cateringId}">
+
+        <!-- reservation IDs already created -->
+        <input type="hidden" name="venueReservationId" th:value="${venueReservationId}">
+        <input type="hidden" name="photographerReservationId" th:value="${photographerReservationId}">
+        <input type="hidden" name="cateringReservationId" th:value="${cateringReservationId}">
+
+        <input type="hidden" name="date" th:value="${date}">
+        <input type="hidden" name="location" th:value="${location}">
+
         <button type="submit"
                 class="w-full px-6 py-3 bg-white text-pink-600 border border-pink-600 font-bold rounded-md shadow hover:bg-pink-50 transition text-lg">
-          Continue Without This Service
+            Continue Without This Service
         </button>
-      </form>
+        </form>
     </div>
   </div>
 
